# CppChordNamer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: chord.h  interval.h  note.h
src/: chord.cpp  chord.h  demo.cpp  interval.cpp  interval.h  main.cpp  note.cpp  note.h
